resolve mixed protocol content updating font protocols from http to https

--- a/fonts.googleapis.com/css4140.css
+++ b/fonts.googleapis.com/css4140.css
@@ -2,11 +2,11 @@
   font-family: 'Droid Sans';
   font-style: normal;
   font-weight: 400;
-  src: local('Droid Sans Regular'), local('DroidSans-Regular'), url(http://fonts.gstatic.com/s/droidsans/v10/SlGVmQWMvZQIdix7AFxXkHNSaA.ttf) format('truetype');
+  src: local('Droid Sans Regular'), local('DroidSans-Regular'), url(https://fonts.gstatic.com/s/droidsans/v10/SlGVmQWMvZQIdix7AFxXkHNSaA.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Droid Sans';
   font-style: normal;
   font-weight: 700;
-  src: local('Droid Sans Bold'), local('DroidSans-Bold'), url(http://fonts.gstatic.com/s/droidsans/v10/SlGWmQWMvZQIdix7AFxXmMh3eDs1Yg.ttf) format('truetype');
+  src: local('Droid Sans Bold'), local('DroidSans-Bold'), url(https://fonts.gstatic.com/s/droidsans/v10/SlGWmQWMvZQIdix7AFxXmMh3eDs1Yg.ttf) format('truetype');
 }
