--- a/fonts.googleapis.com/css5be3.css
+++ b/fonts.googleapis.com/css5be3.css
@@ -2,5 +2,5 @@
   font-family: 'Cookie';
   font-style: normal;
   font-weight: 400;
-  src: local('Cookie-Regular'), url(http://fonts.gstatic.com/s/cookie/v11/syky-y18lb0tSbf9kgqX.ttf) format('truetype');
+  src: local('Cookie-Regular'), url(https://fonts.gstatic.com/s/cookie/v11/syky-y18lb0tSbf9kgqX.ttf) format('truetype');
 }
