--- a/fonts.googleapis.com/css855c.css
+++ b/fonts.googleapis.com/css855c.css
@@ -2,5 +2,5 @@
   font-family: 'Patua One';
   font-style: normal;
   font-weight: 400;
-  src: local('Patua One'), local('PatuaOne-Regular'), url(http://fonts.gstatic.com/s/patuaone/v10/ZXuke1cDvLCKLDcimxB44_lr.ttf) format('truetype');
+  src: local('Patua One'), local('PatuaOne-Regular'), url(https://fonts.gstatic.com/s/patuaone/v10/ZXuke1cDvLCKLDcimxB44_lr.ttf) format('truetype');
 }
